# bitcoin-mining-economics-pipeline

./: .gitignore  README.md  dagster.yaml  docker-compose.yaml  hashrate.json  pyproject.toml  workspace.yaml
bitcoin_mining_economics/: Dockerfile_user_code  __init__.py  definitions.py  project_constants.py
bitcoin_mining_economics/analytics/: .user.yml  dbt_project.yml  profiles.yml
bitcoin_mining_economics/analytics/macros/: generate_schema_name.sql
bitcoin_mining_economics/analytics/models/marts/bitcoin/: hashprice.sql  network_metrics.sql
bitcoin_mining_economics/analytics/models/staging/bitcoin/: _bitcoin__sources.yml  stg_block_reward.sql  stg_btcusd.sql  stg_hashrate.sql
bitcoin_mining_economics/assets/: bitcoin.py  constants.py  dbt.py  hashrate.py  spot.py
bitcoin_mining_economics/assets/bitcoin/: constants.py  hashrate.py  spot.py
bitcoin_mining_economics/assets/mining_stocks/: balance_sheet.py  constants.py  income_statement.py
bitcoin_mining_economics/assets/other/: constants.py
bitcoin_mining_economics/assets/other/fx_rates/: __init__.py  constants.py
bitcoin_mining_economics/jobs/: __init__.py
bitcoin_mining_economics/partitions/: __init__.py
bitcoin_mining_economics/project/: __init__.py
bitcoin_mining_economics/resources/: __init__.py
bitcoin_mining_economics/schedules/: __init__.py
bitcoin_mining_economics/scripts/: exploration.py
bitcoin_mining_economics/temp/: hashrate_temp.json  iren.json
ingestion/: definitions.py
ingestion/assets/: bitcoin.py
ingestion/partitions/: __init__.py
ingestion/scripts/: backfills.py
(+5 files in other folders)
