[project]
name = "ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster==1.10.2",
    "dagster-cloud==1.10.2",
    "pandas==2.2.3",
    "requests==2.32.3",
    "dagster-gcp==0.26.2",
    "dagster-duckdb==0.26.2"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "ingestion.definitions"
code_location_name = "ingestion"

[tool.setuptools.packages.find]
exclude=["ingestion_tests"]
