[project]
name = "bitcoin_mining_economics"
version = "0.1.0"
description = "Monitoring bitcoin mining economics"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster==1.10.2",
    "dagster-cloud==1.10.2",
    "pandas==2.2.3",
    "requests==2.32.3",
    "dagster-gcp==0.26.2",
    "dagster-duckdb==0.26.2",
    "dagster-webserver==1.10.2",
    "pytest==8.3.5",
    "dagster-docker (==0.26.2)",
    "dagster-postgres (==0.26.2)",
    "kagglehub (>=0.3.10,<0.4.0)",
    "finnhub-python (>=2.4.23,<3.0.0)",
    "dagster-dbt (==0.26.2)",
    "dbt-bigquery (>=1.9.1,<2.0.0)",
    "yfinance (>=0.2.55,<0.3.0)"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "bitcoin_mining_economics.definitions"
code_location_name = "bitcoin_mining_economics"